--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://www.cuiks.top/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "hugo-PaperMod"
