--- a/.github/workflows/tcb.yml
+++ b/.github/workflows/tcb.yml
@@ -8,12 +8,12 @@ jobs:
           uses: actions/checkout@v2
         # 使用云开发 Github Action 部署
         - name: Deploy to Tencent CloudBase
-          uses: Cuiks/cloudbase-action@master
+          uses: Cuiks/tcb-action@master
           with: 
             # 云开发的访问密钥 secretId 和 secretKey
             secretId: ${{secrets.SECRET_ID}}
             secretKey: ${{secrets.SECRET_KEY}}
             # 云开发的环境id
             envId: ${{secrets.ENV_ID}}
-            localPath: public
+            localPath: public/
             cloudPath: /
