--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,7 @@ params:
     ShowReadingTime: true
     ShowShareButtons: true
     disableSpecial1stPost: false
-    comments: false
+    comments: true
     hidemeta: false
     showtoc: false
     tocopen: false
@@ -91,6 +91,17 @@ params:
         threshold: 0.4
         minMatchCharLength: 0
         keys: ["title", "permalink", "summary", "content"]
+
+    valine:
+        enable: true
+        appId: qawpEGaIhzxE9qCJm9hisTxW-gzGzoHsz
+        appKey: FkncojWQwaOzzkHjlvW0vH3b
+        notify: false
+        verify: false
+        avatar: 
+        placeholder: 说点什么吧...
+        visitor: true
+
 menu:
     main:
         - identifier: categories
