--- a/.github/workflows/tcb.yml
+++ b/.github/workflows/tcb.yml
@@ -1,4 +1,7 @@
-on: [push] # push 代码时触发
+on:
+  push:
+    branches:
+      - master
 jobs: 
     deploy: 
         runs-on: ubuntu-latest
@@ -6,9 +9,13 @@ jobs:
         steps: 
         - name: Checkout
           uses: actions/checkout@v2
+        - name: build
+          run: |
+            sudo apt-get install hugo
+            hugo -D
         # 使用云开发 Github Action 部署
-        - name: Deploy to Tencent CloudBase
-          uses: Cuiks/tcb-action@master
+        - name: Deploy
+          uses: cuiks/tcb-action@master
           with: 
             # 云开发的访问密钥 secretId 和 secretKey
             secretId: ${{secrets.SECRET_ID}}
