--- a/.github/workflows/tcb.yml
+++ b/.github/workflows/tcb.yml
@@ -9,10 +9,10 @@ jobs:
         steps: 
         - name: Checkout
           uses: actions/checkout@v2
-        - name: build
-          run: |
-            sudo apt-get install hugo
-            hugo -D
+#         - name: build
+#           run: |
+#             sudo apt-get install hugo
+#             hugo -D
         # 使用云开发 Github Action 部署
         - name: Deploy
           uses: cuiks/tcb-action@master
