--- a/config.toml
+++ b/config.toml
@@ -324,7 +324,7 @@ enableEmoji = true
   # Comment config
   # 评论系统设置
   [params.comment]
-    enable = true
+    enable = false
     [params.comment.remark42]
       enable = false
       host = "https://comments.upagge.ru"
@@ -443,7 +443,7 @@ enableEmoji = true
       keepStatic = false
       # whether to make the table of the contents in the sidebar automatically collapsed
       # 是否使侧边目录自动折叠展开
-      auto = true
+      auto = false
     # Code config
     # 代码配置
     [params.page.code]
